--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,2 +1,2 @@
 check_PROGRAMS = test_stepper
-test_stepper_SOURCES = test_stepper.c ../src/stepper.c
+test_stepper_SOURCES = test_stepper.c ../src/stepper.c ../mock/mockpi.c
