Changed src folder to FreeBSD specific files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,2 +1,6 @@
-bin_PROGRAMS=spider
-spider_SOURCES=stepper.c spider.c
+lib_LTLIBRARIES = libspider.la
+libspider_la_SOURCES = motor.c motor.h control.c control.h setup.h
+
+bin_PROGRAMS = spider
+spider_SOURCES = spider.c
+spider_LDADD = libspider.la
