--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@
 *.o
 *.swp
 
+Makefile.in
+aclocal.m4
+ar-lib
+compile
+config.guess
+config.h.in
+config.sub
+configure
+install-sh
+ltmain.sh
+missing
